[tool.poetry]
name = "Hashashin"
version = "0.1.0"
description = ""
authors = ["Hassan Shirazi <shiraziahassan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
"discord.py" = {extras = ["voice"], version = "^1.5.1"}
youtube_dl = "^2020.9.20"
python-dotenv = "^0.14.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.5.4"
pylint = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
